# file-time-exporter

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  example_config.yaml  flake.nix  pyproject.toml  setup.py  treefmt.toml
.github/workflows/: build.yml
file_time_exporter/: app.py  find_files.py  timestamp_extractors.py
file_time_exporter/lookup_strategies/: glob_latest.py  single_file.py
tests/: test_find_files.py
